# rust-good-first-issues

./: Cargo.toml  README.md
.github/workflows/: ci.yml  main.yml
api/: Cargo.toml  docker-compose.yml
api/src/: app.rs  config.rs  errors.rs  extractors.rs  lib.rs  main.rs  middlewares.rs
api/src/github/: client.rs  errors.rs  handlers.rs  middlewares.rs  mod.rs  models.rs  repositories.rs  router.rs
api/src/health_check/: handlers.rs
api/tests/api/: health_check.rs  helpers.rs
api/tests/api/github/: handlers.rs
api/tests/api/github/handlers/: get_repositories.rs  get_repository_good_first_issues.rs
api/tests/api/github/middlewares/: rate_limit.rs
axum_redis_cache/: .env.test
axum_redis_cache/src/: errors.rs  extractors.rs  middlewares.rs
axum_redis_cache/tests/lib/: main.rs  middlewares.rs
axum_redis_utils/: Cargo.toml
axum_redis_utils/src/: errors.rs  extractors.rs  lib.rs  middlewares.rs
axum_redis_utils/tests/lib/: config.rs  helpers.rs  middlewares.rs
server/: .env  .env.example  .gitignore  Cargo.toml
server/api/: .env.example  Cargo.toml  docker-compose.yml
server/api/src/: errors.rs  lib.rs  main.rs  state.rs
server/api/src/github/: client.rs  middlewares.rs  mod.rs  router.rs
server/api/src/health_check/: router.rs
server/api/tests/api/: main.rs
server/api/tests/api/github/handlers/: get_repositories.rs  mod.rs
server/api/tests/api/github/middlewares/: rate_limit.rs
server/axum_redis_cache/: Cargo.toml
server/axum_redis_cache/src/: lib.rs  middlewares.rs
server/src/: config.rs  errors.rs  main.rs  redis_client.rs  redis_repository.rs  state.rs  telemetry.rs
server/src/github/: client.rs  errors.rs  extractors.rs  handlers.rs  http_client.rs  middlewares.rs  mod.rs  models.rs  repositories.rs  router.rs
server/src/github/repositories/http/: client.rs  repositories.rs
server/src/github/repositories/redis/: client.rs  mod.rs  repositories.rs
server/src/github_repositories/: handlers.rs  mod.rs  models.rs  repositories.rs  router.rs
server/src/redis_utils/: client.rs  errors.rs  extractors.rs  middlewares.rs  mod.rs  models.rs  repositories.rs
