[package]
name = "axum_redis_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
redis = { version = "0.26.1", features = ["tokio-comp", "json"] }
bb8 = "0.8.3"
itertools = "0.13.0"
futures-util = "0.3.30"
bb8-redis = "0.16.0"
http-body-util = "0.1.2"
tower = "0.4.13"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
dotenv = "0.15.0"
redis-macros = "0.4.0"
reqwest = { version = "0.12.7", features = ["json"] }
uuid = { version = "1.10.0", features = ["v4"] }

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
